# local-agent-memory-layer

./: .cursorrules  .gitignore  LICENSE  MIGRATION_GUIDE.md  README.md  SETUP_COMPLETE.md
laml/laml-server/: .gitignore  README.md  SETUP_LOCAL.md  docker-compose.clickhouse.yml  docker-compose.elastic.yml  docker-compose.yml  pyproject.toml
laml/laml-server/config/: claude-code-mcp.json.template  cursor-mcp-clickhouse.json.template  env.example  google-gemini-mcp.json.template
laml/laml-server/docs/: CLICKHOUSE_VECTOR_BACKEND.md  ELASTIC_VECTOR_BACKEND.md  MCP_PLATFORM_SETUP.md  MEMORY_MAINTENANCE.md  PLATFORM_SETUP_QUICKREF.md  START_AND_RESTART.md  TURBOPUFFER_VECTOR_BACKEND.md
laml/laml-server/local-only/: README.md
laml/laml-server/scripts/: bootstrap.sh  cron_maintenance.sh  daily_backup.py  fix_related_memories.py  init_clickhouse.py  init_elastic_index.py  local_tools_hint.py  memory_quality.py  migrate.py  migrate_firebolt_to_clickhouse.py  migrate_firebolt_to_elastic.py  migrate_sessions_wm_firebolt_to_clickhouse.py  migrate_sessions_wm_firebolt_to_elastic.py  rebuild_vector_table.py  restart_laml_mcp.sh  schema.sql  seed_core_memories.py  session_summary.py  test_backends.py  test_flow.py  test_security.py  test_tools.py
laml/laml-server/src/: config.py  http_api.py  metrics.py  security.py  server.py
laml/laml-server/src/db/: backend_router.py  client.py  models.py  session_store.py  session_store_clickhouse.py  session_store_elastic.py  session_store_turbopuffer.py  turbopuffer_client.py  (+4 more)
laml/laml-server/tests/: test_elastic_backend.py
(+78 files in other folders)
