[project]
name = "laml-server"
version = "0.1.0"
description = "Local Agent Memory Layer (LAML) - MCP server for LLM memory management with pluggable local vector backends"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clickhouse-connect>=0.7.0",
    "elasticsearch>=8.0.0",
    "firebolt-sdk>=1.0.0",
    "openai>=1.0.0",
    "ollama>=0.1.0",
    "mcp>=0.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
